--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "web-vitals": "^1.1.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "npm run watch:css && react-scripts start",
     "build": "npm run build:css && react-scripts build",
     "test": "react-scripts test",
@@ -39,6 +41,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.2.4",
+    "gh-pages": "^3.1.0",
     "postcss-cli": "^8.3.1",
     "tailwindcss": "^2.0.3"
   }
